@@ -269,6 +269,7 @@ void exec_setup_predefined_variables() {
   setsysvar_str(SYSVAR_COMMAND, opt_command);
   setsysvar_int(SYSVAR_SELF, 0);
   setsysvar_var(SYSVAR_NONE, 0, V_NONE);
+  setsysvar_num(SYSVAR_MAXINT, VAR_MAX_INT);
 
 #if defined(_UnixOS)
   if (getenv("HOME")) {
