@@ -3626,6 +3626,7 @@ void comp_init() {
   comp_var_getID(LCN_SV_Y);
   comp_var_getID(LCN_SV_SELF);
   comp_var_getID(LCN_SV_NONE);
+  comp_var_getID(LCN_SV_MAXINT);
 }
 
 /*
