@@ -1,5 +1,6 @@
 2017-05-20 (0.12.10)
 	COMMON: Implemented Nil system constant
+	COMMON: Implemented Maxint system constant
 
 2017-05-14 (0.12.10)
 	COMMON: Assign multiple variables from an ARRAY
